--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Dependency directory
 node_modules
 
-build
+build/*
+!build/js/.gitkeep
 
 # Logs
 logs
@@ -10,7 +11,4 @@ npm-debug.log*
 
 # Jetbrains
 .idea
-
-# Project
-.gitkeep
 
